# ULTRAFRENCH

./: .gitignore  .gitmodules  DICTIONARY-DEFS.typ  DICTIONARY.dict.txt  DICTIONARY.json  DICTIONARY.tex  DICTIONARY.txt  GENERATE-DICTIONARY.sh  GETPRONUNCIATIONS.py  GRAMMAR.out  GRAMMAR.tex  GRAMMAR.typ  LEXURGY.lsc  PROJECT.smyth  README.md  SLIDES.html  TABLES.ods  copypasta.txt
DICTIONARY/: DICTIONARY-DEFS.typ  DICTIONARY.dict.txt  DICTIONARY.json  DICTIONARY.typ
EDITOR/vscode/: package.json
EDITOR/vscode/syntaxes/: dict_file.tmGrammar.json
EXAMPLES/: CARD.tex  CARD.typ  EXAMPLES.txt
PLUGIN/: .gitignore  Cargo.toml
PLUGIN/src/: ULTRAFRENCHER.rs  lib.rs
SCRIPTS/: BUILD.sh  DEPLOY.sh  GENERATE-DICTIONARY.sh  GENERATE.awk  GLOSS-TO-HTML.sh  PREPROCESS.awk
SLIDES/: package-lock.json  package.json
SLIDES/src/: app.html
SLIDES/src/lib/: style.scss  text.ts
SLIDES/src/routes/: +page.svelte  BasicTable.svelte  CentrePage.svelte  CopyPasta.svelte  Page.svelte  SeqListPages.svelte  SeqTablePages.svelte  Table.svelte  Text.svelte
TRANSLATIONS/: CENTRAL_PRIORY.txt  SHRINE_WARNING.txt
ULTRAFRENCHER/: .clang-format  .gitignore  CMakeLists.txt  ULTRAFRENCHER  dictionary.sqlite
ULTRAFRENCHER/include/: ipa.hh
ULTRAFRENCHER/src/: inflect.cc  inflect.hh  ipa.cc  main.cc  utils.hh  word.cc  word.hh
gendict/: .gitignore  CMakeLists.txt
gendict/src/: main.cc  utils.hh
